[gd_scene load_steps=6 format=3 uid="uid://ciuv2qk880a58"]

[ext_resource type="Script" path="res://scenes/StandinMob.gd" id="1_o8wf1"]
[ext_resource type="PackedScene" uid="uid://tjyfuuog3ynh" path="res://scenes/clown_mob_body.tscn" id="2_puijl"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_irojo"]
friction = 0.0
bounce = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_jdn5d"]
radius = 1.3

[sub_resource type="SphereShape3D" id="SphereShape3D_e86dw"]
radius = 1.5

[node name="StandinMob" type="RigidBody3D"]
physics_material_override = SubResource("PhysicsMaterial_irojo")
max_contacts_reported = 10
contact_monitor = true
angular_damp = 3.0
script = ExtResource("1_o8wf1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_jdn5d")

[node name="ClownMob" parent="CollisionShape3D" instance=ExtResource("2_puijl")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -1, 0)

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="Hitbox" type="Area3D" parent="."]
top_level = true
disable_mode = 1
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
shape = SubResource("SphereShape3D_e86dw")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
